--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
         <title>PaintJS</title>
     </head>
     <body>
+        <canvas id="jsCanvas" class="canvas"></canvas>
+        <div class="controls">
+            <div class="controls_colors" id="jsColors">
+                <div class="controls_color" style="background-color:#2c2c2c"></div>
+                <div class="controls_color" style="background-color:white"></div>
+                <div class="controls_color" style="background-color:#FF3B30"></div>
+                <div class="controls_color" style="background-color:#FF9500"></div>
+                <div class="controls_color" style="background-color:#FFCC00"></div>
+                <div class="controls_color" style="background-color:#32a86d"></div>
+                <div class="controls_color" style="background-color:#447fd8"></div>
+                <div class="controls_color" style="background-color:#3643b3"></div>
+                <div class="controls_color" style="background-color:#8c46bb"></div>
+            </div>
+        </div>
         <script src="app.js"></script>
     </body>
 </html>
