--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div class="controls_color" style="background-color:#FF3B30"></div>
                 <div class="controls_color" style="background-color:#FF9500"></div>
                 <div class="controls_color" style="background-color:#FFCC00"></div>
-                <div class="controls_color" style="background-color:#32a86d"></div>
+                <div class="controls_color" style="background-color:#1ca761"></div>
                 <div class="controls_color" style="background-color:#447fd8"></div>
                 <div class="controls_color" style="background-color:#3643b3"></div>
                 <div class="controls_color" style="background-color:#8c46bb"></div>
