--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
                 <button id="jsSave">Save</button>
             </div>
             <div class="controls_colors" id="jsColors">
-                <div class="controls_color" style="background-color:#2c2c2c"></div>
-                <div class="controls_color" style="background-color:white"></div>
-                <div class="controls_color" style="background-color:#FF3B30"></div>
-                <div class="controls_color" style="background-color:#FF9500"></div>
-                <div class="controls_color" style="background-color:#FFCC00"></div>
-                <div class="controls_color" style="background-color:#1ca761"></div>
-                <div class="controls_color" style="background-color:#447fd8"></div>
-                <div class="controls_color" style="background-color:#3643b3"></div>
-                <div class="controls_color" style="background-color:#8c46bb"></div>
+                <div class="controls_color jsColor" style="background-color:white"></div>
+                <div class="controls_color jsColor" style="background-color:#2c2c2c"></div>
+                <div class="controls_color jsColor" style="background-color:#FF3B30"></div>
+                <div class="controls_color jsColor" style="background-color:#FF9500"></div>
+                <div class="controls_color jsColor" style="background-color:#FFCC00"></div>
+                <div class="controls_color jsColor" style="background-color:#1ca761"></div>
+                <div class="controls_color jsColor" style="background-color:#447fd8"></div>
+                <div class="controls_color jsColor" style="background-color:#3643b3"></div>
+                <div class="controls_color jsColor" style="background-color:#8c46bb"></div>
             </div>
         </div>
         <script src="app.js"></script>
